boreal/tests/assets/invalid_files/parsing/jump_at_bound2.yar
// [error: a list of tokens cannot start or end with a jump]
rule a {
    strings:
        $a = { ( CD EF | AB [-2] ) 85 }
    condition:
        $a
}
